src/test/ui/issue-22644.stderr
error: `<` is interpreted as a start of generic arguments for `usize`, not a comparison
  --> $DIR/issue-22644.rs:16:31
   |
16 |     println!("{}", a as usize < long_name);
   |                    ---------- ^ --------- interpreted as generic arguments
   |                    |          |
   |                    |          not interpreted as comparison
   |                    help: try comparing the casted value: `(a as usize)`

error: `<` is interpreted as a start of generic arguments for `usize`, not a comparison
  --> $DIR/issue-22644.rs:17:33
   |
17 |     println!("{}{}", a as usize < long_name, long_name);
   |                      ---------- ^ -------------------- interpreted as generic arguments
   |                      |          |
   |                      |          not interpreted as comparison
   |                      help: try comparing the casted value: `(a as usize)`

error: `<` is interpreted as a start of generic arguments for `usize`, not a comparison
  --> $DIR/issue-22644.rs:18:31
   |
18 |     println!("{}", a as usize < 4);
   |                    ---------- ^ - interpreted as generic arguments
   |                    |          |
   |                    |          not interpreted as comparison
   |                    help: try comparing the casted value: `(a as usize)`

error: `<` is interpreted as a start of generic arguments for `usize`, not a comparison
  --> $DIR/issue-22644.rs:20:31
   |
20 |     println!("{}{}", a: usize < long_name, long_name);
   |                      -------- ^ -------------------- interpreted as generic arguments
   |                      |        |
   |                      |        not interpreted as comparison
   |                      help: try comparing the casted value: `(a: usize)`

error: `<` is interpreted as a start of generic arguments for `usize`, not a comparison
  --> $DIR/issue-22644.rs:21:29
   |
21 |     println!("{}", a: usize < 4);
   |                    -------- ^ - interpreted as generic arguments
   |                    |        |
   |                    |        not interpreted as comparison
   |                    help: try comparing the casted value: `(a: usize)`

error: `<` is interpreted as a start of generic arguments for `usize`, not a comparison
  --> $DIR/issue-22644.rs:26:20
   |
26 |                    <
   |                    ^ not interpreted as comparison
27 |                    4);
   |                    - interpreted as generic arguments
   |
help: try comparing the casted value
   |
23 |     println!("{}", (a
24 |                    as
25 |                    usize)
   |

error: `<` is interpreted as a start of generic arguments for `usize`, not a comparison
  --> $DIR/issue-22644.rs:35:20
   |
35 |                    <
   |                    ^ not interpreted as comparison
36 |                    5);
   |                    - interpreted as generic arguments
   |
help: try comparing the casted value
   |
28 |     println!("{}", (a
29 | 
30 | 
31 |                    as
32 | 
33 | 
 ...

error: expected type, found `4`
  --> $DIR/issue-22644.rs:38:28
   |
38 |     println!("{}", a: &mut 4);
   |                            ^ expecting a type here because of type ascription

